# SUMO-MCP-Server

./: .flake8  .gitignore  LICENSE  README.md  install_deps.bat  install_deps.ps1  mcp_config_examples.json  pyproject.toml  requirements.txt  start_server.bat  start_server.ps1  start_server.sh
doc/: API.md  SUMO-MCP 开发实施计划.md
docs/: CRITICAL_REVIEW_REPORT.md  WINDOWS_TEST_REPORT.md  issues.csv  plan.md  windows_pytest_output.txt
examples/: README.md  README_signal_optimization.md  SIGNAL_OPTIMIZATION_STATUS.md  signal_optimization_robust.py  signal_optimization_scenario.py
src/: server.py
src/mcp_tools/: analysis.py  network.py  rl.py  route.py  signal.py  simulation.py  vehicle.py
src/utils/: connection.py  sumo.py  timeout.py  traci.py
src/workflows/: rl_train.py  signal_opt.py  sim_gen.py
tests/: comprehensive_test.py  test_api_aliases.py  test_functional.py  test_get_sumo_info_timeout.py  test_online_e2e.py  test_performance.py  test_rl.py  test_rl_custom_training_wrapper.py  test_run_simple_simulation_timeout.py  test_security.py  test_signal_opt.py  test_stability.py  test_subprocess_timeouts.py  test_timeout_configs_tls_tools.py  test_tls_tool_timeout_params.py  test_traci_soft_timeout_disconnect.py  test_traci_start_stdout_suppressed.py  test_utils_sumo_binary.py  test_vehicle_tools.py  test_windows_compat.py  test_workflow.py  test_workflows_signal_opt_fallback.py
tests/fixtures/simple_sim/: hello.net.xml  hello.rou.alt.xml  hello.rou.xml  hello.trips.xml
tests/test_outputs/manual_check/: fcd.xml  grid.net.xml  routes.alt.xml  routes.xml  (+2 more)
(+5 files in other folders)
