[project]
name = "sumo-mcp"
version = "0.1.0"
description = "SUMO-MCP: Autonomous Traffic Simulation Platform with Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "sumolib>=1.20.0",
    "traci>=1.20.0",
    "sumo-rl>=1.4.3",
    "pandas>=2.0.0",
    "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "flake8>=7.0.0",
    "pytest>=8.0.0",
    "psutil>=5.9.0",
    "types-requests>=2.31.0",
    "types-setuptools>=69.0.0",
    "pandas-stubs>=2.0.0"
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.8.0",
    "flake8>=7.0.0",
    "pytest>=8.0.0",
    "psutil>=5.9.0",
    "types-requests>=2.31.0",
    "types-setuptools>=69.0.0",
    "pandas-stubs>=2.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.hatch.build.targets.wheel]
packages = ["src"]
sources = ["src"]
